# coinflip_animation

./: Cargo.toml  README.TXT
src/: main.rs
