[package]
name = "coinflip_animation"
version = "0.2.1"
edition = "2021"
description = "A simple coinflip animation in the terminal, as a screensaver or just simply to look at."
documentation = "https://docs.rs/crate/coinflip_animation"
readme = "README.TXT"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.4.4", features = ["termination"] }
